name:                hipher
version:             0.1.0.0
synopsis:            A classical cryptography library
-- description:
homepage:            https://github.com/Absolvnt/hipher
license:             BSD3
license-file:        LICENSE
author:              Elvis Jakobsson
maintainer:          elvisjacobsson94@gmail.com
copyright:           2020 Elvis Jakobsson
category:            Utility
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Cipher
                       Cipher.Polyalphabetic
                       Cipher.Polybius
                       Cipher.Square
                       Cipher.Substitution
                       Cipher.Transposition
  ghc-options:         -Wall -Werror -fwarn-tabs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , hipher
  other-modules:       CipherSpec
                       Cipher.PolyalphabeticSpec
                       Cipher.PolybiusSpec
                       Cipher.SquareSpec
                       Cipher.SubstitutionSpec
                       Cipher.TranspositionSpec
  default-language:    Haskell2010

-- executable cipher
--  hs-source-dirs:      src
--  main-is:             Main.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.7 && < 5



